--- a/JenkinsFile
+++ b/JenkinsFile
@@ -14,7 +14,7 @@ pipeline {
         }
         stage('run') { 
             steps {
-                sh "cd jenkins_helloWorld/ && java Main"
+                sh "cd jenkins_helloWorld/ && java main"
             }
         }
     }
